[tool.poetry]
name = "amanecer"
version = "0.1.0"
description = ""
authors = ["YusukeSuzuki1213"]

[tool.poetry.dependencies]
python = "^3.9"
autopep8 = "^1.5.7"
flake8 = "^3.9.2"
requests = "^2.25.1"
python-dotenv = "^0.17.1"
mypy = "^0.812"
tweepy = "^3.10.0"
injector = "^0.18.4"
boto3 = "^1.17.97"
beautifulsoup4 = "^4.9.3"
lxml = "^4.6.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
